fix(chart-style): align chart top with aside heading

--- a/components/CourseCharts/course-charts.module.scss
+++ b/components/CourseCharts/course-charts.module.scss
@@ -10,5 +10,5 @@
 }
 
 .charts {
-  margin: var(--spacing-2) 0;
+  margin: var(--spacing-1) 0 var(--spacing-2);
 }
